@@ -2407,7 +2407,6 @@ L["ImmuneToStun"] = "Immune To Stun"
 L["ImmuneToMagicCC"] = "Immune To Magic CC"
 L["Disoriented"] = "Disoriented"
 L["Silenced"] = "Silenced"
-L["Disarmed"] = "Disarmed"
 L["Rooted"] = "Rooted"
 L["Shatterable"] = "Shatterable"
 L["IncreasedStats"] = "Increased Stats"
@@ -2415,28 +2414,32 @@ L["IncreasedCrit"] = "Increased Crit Chance"
 L["IncreasedMastery"] = "Increased Mastery"
 L["IncreasedAP"] = "Increased Attack Power"
 L["IncreasedSP"] = "Increased Spellpower"
-L["IncreasedSPsix"] = "Increased Spellpower (6%)"
-L["IncreasedSPten"] = "Increased Spellpower (10%)"
-L["IncreasedPhysHaste"] = "Increased Physical Haste"
-L["IncreasedSpellHaste"] = "Increased Spell Haste"
+L["IncreasedHaste"] = "Increased Haste"
 L["DamageShield"] = "Damage Shield"
 --L["BurstHaste"] = "Heroism/Bloodlust" -- defined in static formats
 L["BonusStamina"] = "Increased Stamina"
-L["BurstManaRegen"] = "Burst Mana Regen"
-L["PhysicalDmgTaken"] = "Physical Damage Taken"
-L["SpellDamageTaken"] = "Increased Spell Damage Taken"
-L["ReducedCastingSpeed"] = "Reduced Casting Speed"
-L["ReducedArmor"] = "Reduced Armor"
 L["ReducedHealing"] = "Reduced Healing"
-L["ReducedPhysicalDone"] = "Reduced Physical Damage Done"
 L["DefensiveBuffs"] = "Defensive Buffs"
 L["MiscHelpfulBuffs"] = "Misc. Helpful Buffs"
 L["SpeedBoosts"] = "Speed Boosts"
 L["DamageBuffs"] = "Damage Buffs"
+L["IncreasedVersatility"] = "Increased Versatility"
+L["IncreasedMultistrike"] = "Increased Multistrike"
 
 -- Deprecated
-L["DontMelee"] = "Don't Melee"
-L["MovementSlowed"] = "Movement Slowed"
+-- L["BurstManaRegen"] = "Burst Mana Regen"
+--L["DontMelee"] = "Don't Melee"
+--L["MovementSlowed"] = "Movement Slowed"
+--L["ReducedCastingSpeed"] = "Reduced Casting Speed"
+--L["ReducedPhysicalDone"] = "Reduced Physical Damage Done"
+--L["SpellDamageTaken"] = "Increased Spell Damage Taken"
+--L["ReducedArmor"] = "Reduced Armor"
+-- L["Disarmed"] = "Disarmed"
+--L["IncreasedSPsix"] = "Increased Spellpower (6%)"
+--L["IncreasedSPten"] = "Increased Spellpower (10%)"
+--L["IncreasedPhysHaste"] = "Increased Physical Haste"
+--L["IncreasedSpellHaste"] = "Increased Spell Haste"
+--L["PhysicalDmgTaken"] = "Physical Damage Taken"
 
 L["Heals"] = "Player Heals"
 L["PvPSpells"] = "PvP Crowd Control, etc."
