@@ -26,7 +26,7 @@ elseif strmatch(projectVersion, "%-%d+%-") then
 end
 
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. " " .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 71019 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
+TELLMEWHEN_VERSIONNUMBER = 71020 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL (for versioning of)
 
 TELLMEWHEN_FORCECHANGELOG = 71010 -- if the user hasn't seen the changelog until at least this version, show it to them.
 
@@ -349,55 +349,48 @@ TMW.BE = {
 
 	--NOTE: any id prefixed with "_" will have its localized name substituted in instead of being forced to match as an ID
 	debuffs = {
-		ReducedArmor		= "113746",
-		PhysicalDmgTaken	= "81326;35290;50518;57386;55749",
-		SpellDamageTaken	= "93068;_1490;34889;24844;116202",
-		ReducedPhysicalDone = "115798;50256;24423",
-		ReducedCastingSpeed = "31589;73975;5761;109466;50274;90314;126402;58604",
+		Silenced			= "_47476;_78675;_15487;_1330;114238;_18498;_25046;31935;31117;102051",
 		ReducedHealing		= "115804",
-		Stunned				= "_1833;_408;_91800;_113801;5211;9005;22570;19577;24394;56626;44572;_853;64044;96201;_20549;46968;132168;_30283;_7922;50519;91797;_89766;54786;105593;120086;117418;115001;_131402;108194;117526;105771;_122242;113953;118905;119392;119381;118271",
-		Incapacitated		= "20066;1776;_6770;115078;115268;107079",
-		Rooted				= "_339;_122;_64695;_19387;33395;_4167;54706;50245;90327;16979;45334;_87194;63685;102359;_128405;116706;123407;115197;107566",
-		Disarmed			= "_51722;_676;64058;50541;91644;117368",
-		Silenced			= "_47476;_78675;_34490;_55021;_15487;_1330;_24259;_18498;_25046;31935;31117;102051;116709;142895",
-		Shatterable			= "122;33395;_44572;_82691", -- by algus2
-		Disoriented			= "_19503;31661;_2094;_51514;90337;88625;105421;99",
-		Slowed				= "_116;_120;_13810;_5116;_8056;_3600;_1715;_12323;116095;_20170;_115180;45524;_18223;_15407;_3409;26679;_58180;61391;44614;_7302;_8034;_63529;_15571;_7321;_7992;123586;47960;129923", -- by algus2 
-		Feared				= "_5782;5246;_8122;10326;1513;111397;_5484;_6789;_87204;20511;112928;113004;113792;113056",
-		Bleeding			= "_1822;_1079;9007;33745;1943;_703;_115767;89775;_11977;106830;77758",
+
+		Stunned				= "_1833;_408;_91800;_113801;5211;22570;19577;24394;44572;_853;_20549;46968;132168;_30283;_7922;64044;91797;_25;_89766;105593;120086;117418;115001;_131402;108194;117526;118905;119392;119381;118345;132169",
+		Incapacitated		= "99;3355;_19386;20066;_118;1776;_6770;115078;115268;107079;31661;82691;123393;_137460;88625;_51514",
+		Rooted				= "_339;_122;_64695;_19387;33395;16979;45334;_87194;63685;102359;_128405;116706;107566;96294;105771;53148;_114404",
+		Shatterable			= "122;33395;_44572;_82691;63685;102051", -- by algus2
+		Disoriented			= "31661;_2094;_51514;99;123393",
+		Slowed				= "_116;_120;_13810;_5116;_8056;_3600;_1715;_12323;116095;_20170;_115180;45524;50435;_15407;_3409;26679;_58180;61391;44614;_7302;_63529;_15571;_7321;_7992;123586;47960;129923", -- by algus2 
+		Feared				= "_5782;5246;_8122;10326;_137143;_5484;_6789;_87204",
+		Bleeding			= "_1822;_1079;33745;1943;_703;_115767;89775;_11977;106830;77758",
 		
-		-- EXISTING WAS CHECKED, DIDN'T LOOK FOR NEW (mists of pandaria)  ONES YET:
-		CrowdControl		= "_118;2637;33786;113506;_1499;_19503;_19386;20066;10326;_9484;_6770;_2094;_51514;76780;_710;_5782;_6358;_605;_82691;115078;115268;107079", -- originally by calico0 of Curse
+		CrowdControl		= "_118;33786;_1499;_19386;20066;10326;_9484;_6770;_2094;_51514;_710;_5782;_6358;_605;_82691;115078;115268;107079", -- originally by calico0 of Curse
 		
 	},
 	buffs = {
-		IncreasedMastery	= "19740;116956;93435;127830",
-		IncreasedSP			= "1459;61316;77747;109773;126309",
+		IncreasedMastery	= "155522;24907;19740;116956;93435;160039;128997;160073",
+		IncreasedHaste  	= "55610;49868;116956;113742;160003;135678;160074;128432",
+		IncreasedSP			= "1459;61316;109773;126309;90364",
 		IncreasedAP			= "57330;19506;6673",
-		IncreasedPhysHaste  = "55610;113742;30809;128432;128433",
-		IncreasedStats		= "1126;_117666;20217;90363",
-		BonusStamina		= "21562;109773;469;90364",
-		IncreasedSpellHaste = "24907;15473;51470;49868;135678",
-		IncreasedCrit		= "24932;1459;61316;97229;24604;90309;126373;126309;116781",
+		IncreasedStats		= "1126;20217;90363;115921;116781;159988;160017;160077;72586",
+		IncreasedVersatility= "55610;1126;167187;167188;159735;35290;160045;50518;57386;160077",
+		IncreasedMultistrike= "166916;49868;113742;109773;58604;34889;57386;24844;", -- TODO: basilisks, foxes, and chimaera are supposed to have this, but they currently don't in beta.
+		BonusStamina		= "21562;116928;469;90364;160003;160014;111922",
+		IncreasedCrit		= "24932;1459;61316;116781;97229;24604;90309;126373;126309;160052",
+		BurstHaste			= "2825;32182;80353;90355;146555;160452",
 		
 		-- From l337g0g0 of Curse:
-		DamageShield		= "_17;_11426;116849;115295;114908;110913;108416;112048;86273;114214;47753;65148;108008;1463;108366;119839;_6229;115635;77535;145441",
+		DamageShield		= "_17;_11426;116849;115295;114908;110913;108416;112048;86273;114214;47753;65148;108008;1463;108366;115635;77535;145441",
 		
-		-- EXISTING WAS CHECKED, DIDN'T LOOK FOR NEW (mists of pandaria) ONES YET:
 		ImmuneToStun		= "642;45438;48792;1022;33786;710;46924;19263;6615",
 		ImmuneToMagicCC		= "642;45438;48707;33786;710;46924;19263;31224;8178;23920;49039;114028",
-		BurstHaste			= "2825;32182;80353;90355;146555",
-		BurstManaRegen		= "29166;16191;64901",
 		DefensiveBuffs		= "48707;30823;33206;47585;871;48792;498;22812;61336;5277;74001;47788;19263;6940;31850;31224;42650;86657;118038;115176;115308;120954;115295;51271;12975;97463;102342;114039",
-		MiscHelpfulBuffs	= "96267;10060;23920;68992;54428;2983;1850;29166;16689;53271;1044;31821;45182;114028",
-		SpeedBoosts			= "54861;121557;_2983;_61684;68992;108843;65081;118922;108212;2379;58875;133278;85499;96268;137452;111400;116841;119085;7840;5118;13159;2645;122294;_77761",
-		DamageBuffs			= "1719;12292;50334;5217;3045;77801;34692;31884;51713;49016;12472;57933;86700;51271;_107574;114050;114051",
+		MiscHelpfulBuffs	= "10060;23920;68992;2983;1850;53271;1044;31821;45182;114028",
+		SpeedBoosts			= "54861;121557;_2983;_61684;68992;108843;65081;118922;108212;2379;58875;133278;85499;96268;137452;111400;116841;119085;7840;5118;13159;2645;_77761",
+		DamageBuffs			= "1719;12292;50334;5217;3045;77801;31884;51713;12472;57933;51271;_107574;114050;114051",
 	},
 	casts = {
 		--prefixing with _ doesnt really matter here since casts only match by name,
 		-- but it may prevent confusion if people try and use these as buff/debuff equivs
-		Heals				= "50464;5185;8936;740;2050;2060;2061;32546;596;64843;635;82326;19750;331;77472;8004;1064;73920;124682;115175;116694",
-		PvPSpells			= "33786;339;20484;1513;982;64901;_605;5782;5484;10326;51514;118;12051;20066",
+		Heals				= "5185;8936;740;2060;2061;32546;596;64843;82326;19750;77472;8004;1064;73920;124682;115175;116694;33076;120517;121135;48438;116670;114163;85222;85673",
+		PvPSpells			= "33786;339;20484;982;_605;5782;5484;10326;51514;118;12051;20066",
 		Tier11Interrupts	= "_83703;_82752;_82636;_83070;_79710;_77896;_77569;_80734;_82411",
 		Tier12Interrupts	= "_97202;_100094",
 	},
@@ -464,6 +457,14 @@ function TMW:ProcessEquivalencies()
 					end
 				end
 			end
+			local t = TMW:SplitNames(str)
+			for _, spell in pairs(t) do
+				if type(spell) == "number" and not TMW_GetSpellInfo(spell) then
+					TMW:Debug("Invalid spellID found: %s (%s - %s)!",
+						spell, category, equiv)
+				end
+			end
+
 			TMW.BE[category][equiv] = str
 		end
 	end
@@ -904,7 +905,7 @@ function TMW.print(...)
 		--	prefix = prefix..format(" %4.0f", linenum(3))
 			prefix = format("|cffff0000 %s", linenum(3, 1))
 		end
-		if not TMW.Initialized then
+		if not TMW.debug then
 			prefix = prefix .. " PRE-INIT DEBUG"
 		end
 
@@ -2118,6 +2119,13 @@ TMW.UpgradeTableByVersions = {}
 
 function TMW:GetBaseUpgrades()			-- upgrade functions
 	return {
+
+		[71020] = {
+			icon = function(self, ics)
+				ics.Name = ics.Name:gsub("IncreasedPhysHaste", "IncreasedHaste")
+				ics.Name = ics.Name:gsub("IncreasedSpellHaste", "IncreasedHaste")
+			end,
+		},
 
 		[70001] = {
 			global = function(self)
